# jsonlens

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
jsonlens/: __init__.py  core.py
